SDIT-1384 StaffResource (#1963)
* SDIT-1384 StaffResource

formatting only

* SDIT-1384 StaffResource

Add logging to check client users

* SDIT-1384 StaffResource

Test fix

---------

Co-authored-by: steverendell <steve.rendell@syscon.net>